# citlali

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  404.html  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  LICENSE  README.md  README.rst  annotated.html  bits_8h.html  bits_8h__dep__incl.map  bits_8h__dep__incl.md5  bits_8h__incl.map  bits_8h__incl.md5  bits_8h_source.html  build.sh  classconfig_1_1_config-members.html  classconfig_1_1_config.html  classconfig_1_1_config__coll__graph.map  classconfig_1_1_config__coll__graph.md5  classes.html  classlogging_1_1progressbar-members.html  classlogging_1_1progressbar.html  classlogging_1_1progressbar__coll__graph.map  classlogging_1_1progressbar__coll__graph.md5  classmeta_1_1_ts.html  classmeta_1_1_ts__coll__graph.map  classmeta_1_1_ts__coll__graph.md5  classmeta_1_1_ts__inherit__graph.map  classmeta_1_1_ts__inherit__graph.md5  config.yaml  config_8h.html  config_8h__incl.map  config_8h__incl.md5  config_8h_source.html  container_8h.html  container_8h__incl.map  (+650 more)
.github/workflows/: cmake-single-platform.yml  doxygen-gh-pages.yml
citlali_src/: LICENSE  import.cmake
citlali_src/docs/: Doxyfile.in
citlali_src/tests/: CMakeLists.txt
citlali_test/data/: config.yaml
citlali_test_2/: CMakePresets.json
common_utils/: .gitignore  .gitmodules  CMakeLists.txt  README.md
common_utils/cmake/: Boost.cmake  Ceres.cmake  Cli11.cmake  Clipp.cmake  CommonSettings.cmake  DoxygenDocTarget.cmake  Eigen3.cmake  FetchContentHelper.cmake  FileSystem.cmake  FindMKL.cmake  FindMKLSimple.cmake  FindNetCDF.cmake  FindNumPy.cmake  FindYaml.cmake  GBenchAndGTest.cmake  Grppi.cmake  MXX.cmake  NetCDFCXX4.cmake  PrintProperties.cmake  Python3AndNumpy.cmake  README.md  Re2.cmake  SharedMemory.cmake  SpdlogAndFmt.cmake  Spectra.cmake  Tclap.cmake  Uriparser.cmake  Yaml.cmake  gitversion.cmake  gitversion.h.in
common_utils/cmake/clang-tidy/: default_7.0  simple.ctd  thorough.ctd  thorough_for_gtest.ctd  thorough_no_sa.ctd
common_utils/cmake/patches/: .netcdf_cxx4_fixcmake.patch.swp  benchmark_disable_tests.patch  ceres-with-exported-eigen-build.patch  ceres_mkl_compat.patch  eigen3_no_examples.patch  mxx_fixcmake.patch  netcdf-c-subdir-build.patch  netcdf_cxx4_fixcmake.patch  netcdf_cxx4_fixcmake_old.patch  patch.sh
common_utils/docs/: Doxyfile.in
common_utils/src/utils/: bits.h  config.h  container.h  datatable.h  ecsv.h  eigen.h  eigen_op.h  eigeniter.h  enum.h  filename.h  filesystem.h  grppiex.h  logging.h  matplotlibcpp.h  meta.h  mpi.h  nc.h
common_utils/src/utils/algorithm/: binning.h  ei_ceresfitter.h  ei_convolve.h  ei_detect1d.h  ei_interp.h  ei_iterclip.h  ei_linspaced.h  ei_numdiff.h  ei_polyfit.h  ei_stats.h  ei_uniquefy.h  index.h  lacosmic1d.h
common_utils/src/utils/enum/: bitmask.h  meta_enum.h
common_utils/src/utils/formatter/: all.h  byte.h  container.h  eigeniter.h  enum.h  matrix.h  ptr.h  utils.h
common_utils/src/utils/macro/: map.h
common_utils/src/utils/nddata/: nddata.h
common_utils/test_progs/: CMakeLists.txt
common_utils/test_progs/mpi/: CMakeLists.txt  main.cpp
common_utils/tests/: .clang-tidy  CMakeLists.txt  eigeniter.cpp  formatter.cpp  main.cpp  test_enums.h
core/: TCData.h  config.h  coordinator.h  debug.h  lali.h  observation.h  result.h  tester.h  testsuite.h
core/map/: calcpsd.h  coadd.h  map.h  map_utils.h  maphist.h  mapmaking.h  wiener.h  wiener2.h
core/timestream/: TCData.h  arraydespike.h  cleanPCA.h  cleanpca.h  cleanpca2.h  despike.h  downsample.h  filter.h  kernel.h  mapresult.h  observation.h  read.h  rtcdata.h  timestream.h  timestream_utils.h
d0/d03/: structCoordinator_1_1Observation_1_1DataItem__coll__graph.map  structCoordinator_1_1Observation_1_1DataItem__coll__graph.md5
d0/d13/: structConfigMixin-members.html
d0/d1e/: structengine__utils_1_1Gaussian1D.html
d0/d28/: classmapmaking_1_1WienerFilter__coll__graph.map  classmapmaking_1_1WienerFilter__coll__graph.md5
d0/d2f/: structRawObs_1_1PhotometryCalibInfo.html
d0/d37/: structRawObs_1_1AstrometryCalibInfo.html
d0/d41/: structtimestream_1_1TimeStream-members.html
d0/d4e/: structmatplotlibcpp_1_1detail_1_1plot__impl_3_01std_1_1false__type_01_4__coll__graph.map  structmatplotlibcpp_1_1detail_1_1plot__impl_3_01std_1_1false__type_01_4__coll__graph.md5
d0/d53/: structmatplotlibcpp_1_1detail_1_1select__npy__type_3_01int64__t_01_4-members.html
d0/d5b/: diagnostics_8h.html  diagnostics_8h_source.html
d0/d5d/: structtimestream_1_1internal_1_1TCDataBase_3_01TCData_3_01kind___01_4_01_4.html
d0/d62/: structDataIOError__inherit__graph.map
d0/d6c/: classengine__utils_1_1SplineFunction-members.html
d0/d8a/: netcdf__io_8h__dep__incl.map  netcdf__io_8h__dep__incl.md5
d0/d8b/: structtimestream_1_1TimeStream_1_1dataref__t__inherit__graph.md5
d0/d92/: structengine__utils_1_1SymmetricGaussian2D-members.html
d0/d96/: classengine__utils_1_1SplineFunction.html  classengine__utils_1_1SplineFunction_a3190903eb1fb8776a6e34a962c4f3794_cgraph.map  classengine__utils_1_1SplineFunction_a3190903eb1fb8776a6e34a962c4f3794_cgraph.md5  classengine__utils_1_1SplineFunction_a3190903eb1fb8776a6e34a962c4f3794_icgraph.map  classengine__utils_1_1SplineFunction_a3190903eb1fb8776a6e34a962c4f3794_icgraph.md5  classengine__utils_1_1SplineFunction_a5ae81e481d2c888c76fbf2fe38bc5511_cgraph.map  (+7 more)
d0/d99/: structmapmaking_1_1WCS__coll__graph.map  (+1 more)
data/: config.yaml  default_config.h.in  tel_toltec_2020-10-01_103371_00_0000.nc
licenses/: LICENSE
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_16.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  (+145 more)
src/: citlali  citlali.cmake  kids  lali.cpp  utils
tests/: CMakeLists.txt  main.cpp  test_utils.cpp
(+1746 files in other folders)
